# workshop-embedded-twoparter

./: .gitignore  Cargo.toml  README.md  book.toml  openocd.gdb  rust-toolchain.toml  workshop.code-workspace
.cargo/: config.toml
assignments/part_1/: Cargo.toml
assignments/part_1/.cargo/: config.toml
assignments/part_1/src/: main.rs
assignments/part_2/cli/: Cargo.toml
assignments/part_2/cli/src/: main.rs
assignments/part_2/firmware/: Cargo.toml
assignments/part_2/firmware/src/: hal_import.rs
assignments/part_2/format/: Cargo.toml
assignments/part_2/format/src/: server_to_device.rs
assignments/part_2a/: Cargo.toml
assignments/part_2a/.cargo/: config.toml
assignments/part_2a/src/: lib.rs  main.rs
assignments/part_2b/: Cargo.toml
assignments/part_2b/cli/: Cargo.toml
assignments/part_2b/cli/src/: cmd.rs  main.rs  serial.rs
assignments/part_2b/firmware/: Cargo.toml
assignments/part_2b/firmware/.cargo/: config.toml
assignments/part_2b/firmware/src/: lib.rs  main.rs  uarte.rs
assignments/part_2b/format/: Cargo.toml
assignments/part_2b/format/src/: device_to_server.rs  lib.rs  server_to_device.rs
assignments/part_2b/scripts/: defmt_log.sh
assignments/part_3/: Cargo.toml  README.md
assignments/part_3/.cargo/: config.toml
assignments/test/: Cargo.toml
assignments/test/.cargo/: config.toml
assignments/test/src/: hal_import.rs
material/: Cargo.toml  SUMMARY.md
material/assets/js/: main.js
material/assets/style/: main.css
material/part_1/: introduction.md
material/part_1/exercise_lis3dh_driver/: exercise.md  solution.md
material/part_1/exercise_lis3dh_id/: exercise.md
material/part_1/platform-agnostic_device_drivers/: abstraction_in_rust.md  fancy_LL_driver_in_rust.md  introduction.md
material/part_1/portable_device_drivers/: LL&HL_drivers.md  LL_driver.md  abstraction_in_c.md  abstraction_in_rust.md  fancy_LL_driver_in_rust.md  introduction.md
material/part_1/rust_embedded_ecosystem/: cortex-m_crates.md  device_hals.md  device_pacs.md  embedded-hal.md  introduction.md  runtimes.md  typestate.md
material/part_2/: assignment_a.md  assignment_b.md  introduction.md  overview.md
material/part_2/cargo/: 1.md
material/part_2/common_format/: 1.md
material/part_2/dev_env/: 1.md
material/part_2/knurling/: 1.md
material/part_2/rtic/: 1.md  rtic.md  rtic_example.rs  rtic_outline.rs
material/part_2/server/: 1.md
material/preface/: curriculum.md  introduction.md  setup.md
material/src/: lib.rs
material/testsuite/: Cargo.toml
material/testsuite/src/: lib.rs
material/testsuite/tests/: test.rs
scripts/: rtt_block.sh
