[package]
name = "workshop-assignment-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7" }
cortex-m-rt = "0.7.3"
nrf52840-hal = { version = "0.16.0", features = ["rt"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
embedded-hal = "0.2.7"

[profile.release]
debug = true
lto = true
