[package]
name = "firmware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.6.15"

defmt = "0.3.0"
defmt-rtt = "0.3.0"
embedded-hal = "0.2.6"
heapless = "0.7.8"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
postcard = "0.7.0"
nb = "1.0.0"

[dependencies.lis3dh]
git = "https://github.com/BenBergman/lis3dh-rs.git"
rev = "230fb24d18765e187626bafe8b33a054bbb60be4"

[dependencies.cortex-m-rtic]
version = "0.5.9"
default-features = false
features = ["cortex-m-7"]

[dependencies.serde]
version = "1.0.126"
features = ["derive"]
default-features = false

[dependencies.nrf52840-hal]
optional = true
version = "0.14.0"
features = ["rt"]

[dependencies.nrf52832-hal]
optional = true
version = "0.14.0"
features = ["rt"]

[features]
default = ["nrf52dk"]
nrf52dk = ["nrf52832-hal"]
nrf52840dk = ["nrf52840-hal"]
