[package]
name = "workshop-examples"
version = "0.1.0"
authors = ["Henk Oordt <hd@tweedegolf.com>", "Dion Dokter <dion@tweedegolf.com>"]
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
embedded-hal = "0.2.7"
lis3dh = "0.4.1"
defmt = "0.3.0"

[dependencies.nrf52840-hal]
optional = true
version = "0.16.0"
features = ["rt"]

[dependencies.nrf52832-hal]
optional = true
version = "0.16.0"
features = ["rt"]

[features]
nrf52dk = ["nrf52832-hal"]
nrf52840dk = ["nrf52840-hal"]

[profile.release]
debug = true
lto = true
