[package]
name = "firmware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.6.15"

defmt = "0.3.0"
defmt-rtt = "0.3.0"
embedded-hal = "0.2.6"
heapless = "0.7.8"
lis3dh = "0.4.1"
panic-probe = "0.3.0"
postcard = "0.7.0"

format = { path = "../format", features = ["defmt"] }
nb = "1.0.0"

[dependencies.cortex-m-rtic]
version = "0.5.9"
default-features = false
features = ["cortex-m-7"]

[dependencies.serde]
version = "1.0.126"
features = ["derive"]
default-features = false

[dependencies.nrf52840-hal]
optional = true
version = "0.14.0"
features = ["rt"]

[dependencies.nrf52832-hal]
optional = true
version = "0.14.0"
features = ["rt"]

[features]
default = ["nrf52dk"]
nrf52dk = ["nrf52832-hal"]
nrf52840dk = ["nrf52840-hal"]
