[package]
name = "firmware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "0.2.7"
heapless = "0.7.16"
lis3dh = "0.4.2"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-probe = { version = "0.3.0", features = ["print-rtt"] }
postcard = "1.0.4"
systick-monotonic = "1.0.1"

format = { path = "../format" }
nb = "1.0.0"

[dependencies.cortex-m-rtic]
version = "1.1.4"
default-features = false

[dependencies.serde]
version = "1.0.152"
features = ["derive"]
default-features = false

[dependencies.nrf52840-hal]
optional = true
version = "0.16.0"
features = ["rt"]

[dependencies.nrf52832-hal]
optional = true
version = "0.16.0"
features = ["rt"]

[features]
default = ["nrf52840dk"]
nrf52dk = ["nrf52832-hal"]
nrf52840dk = ["nrf52840-hal"]

[profile.release]
debug = true
lto = true
